# MCPFinAnalyst

./: .gitignore  .replit  README.md  config.py  config.yaml  main.py  pyproject.toml
agents/: __init__.py  query_analyzer.py  retriever.py  synthesizer.py
attached_assets/: PRD - MCP-powered Agentic RAG workflow_1749641443286.docx
core/: __init__.py  document_processor.py  vector_store.py  workflow_orchestrator.py
data/project_docs/: project_overview.md
notebooks/: 01_data_ingestion_test.ipynb  02_retrieval_test.ipynb
src/: __init__.py  cli.py
src/components/: __init__.py  embedders.py  llms.py  vector_stores.py
src/core/: __init__.py  agents.py  orchestrator.py
src/processing/: __init__.py  chunker.py  loader.py
src/utils/: __init__.py  config_manager.py  logger.py
utils/: __init__.py  chunking.py  logger.py
wiki/: API-Documentation.md  Architecture-Overview.md  CLI-Reference.md  Configuration.md  Contributing.md  Home.md  Installation-Guide.md  Multi-Agent-Workflow.md  Quick-Start.md  Troubleshooting.md
